--- a/stock/src/styles/gainer.module.css
+++ b/stock/src/styles/gainer.module.css
@@ -8,7 +8,7 @@
     grid-template-columns:24% 24% 24% 24% ;
     margin: auto;
 }
-.gainers div{
+.gainers>div{
     margin-left:5%;
 
     height:140px;
