--- a/stock/src/styles/losers.module.css
+++ b/stock/src/styles/losers.module.css
@@ -8,7 +8,7 @@
     grid-template-columns:24% 24% 24% 24% ;
     margin: auto;
 }
-.lossers div{
+.lossers>div{
     margin-left:5%;
 
     height:140px;
