--- a/stock/src/styles/screener.module.css
+++ b/stock/src/styles/screener.module.css
@@ -3,17 +3,15 @@
     width:99%;
     
     margin-top:5%;
-    /* display: grid;
-    grid-template-columns:repeat(3,1fr) */
+   
 }
 .sindex{
     display:grid;
     grid-template-columns:33% 33% 33%;
     margin: auto;
 }
-.sindex div{
+.sindex>div{
     margin-left:5%;
-
-    height:70px;
+height:70px;
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
