--- a/stock/src/App.css
+++ b/stock/src/App.css
@@ -1,38 +1,23 @@
 .App {
-  text-align: center;
+  width: 50%;
+  margin: auto;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.react-chatbot-kit-chat-inner-container, .react-chatbot-kit-chat-input-container{
+  width: 400px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.react-chatbot-kit-chat-bot-message-container{
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: flex-start;
 }
-
-.App-link {
-  color: #61dafb;
+.react-chatbot-kit-chat-bot-message {
+   margin-left: 10px;
+   font-weight: bold;
+   font-size: 12px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.react-chatbot-kit-chat-input{
+  outline: none;
+}
+.react-chatbot-kit-user-chat-message{
+  margin-right: 10px;
 }
