--- a/stock/src/App.css
+++ b/stock/src/App.css
@@ -1,7 +1,7 @@
-.App {
-  width: 50%;
+/* .App {
+  width: 100%;
   margin: auto;
-}
+} */
 .react-chatbot-kit-chat-inner-container, .react-chatbot-kit-chat-input-container{
   width: 400px;
 }
