--- a/stock/src/App.css
+++ b/stock/src/App.css
@@ -1,38 +1,14 @@
-.App {
+/* .App {
   width: 50%;
   margin: auto;
-}
-.react-chatbot-kit-chat-inner-container, .react-chatbot-kit-chat-input-container{
-  width: 400px;
-}
-.react-chatbot-kit-chat-bot-message-container{
+}*/
+ 
+.App{
   width: 100%;
-  display: flex;
-  justify-content: flex-start;
-}
-.react-chatbot-kit-chat-bot-message {
-   margin-left: 10px;
-   font-weight: bold;
-   font-size: 12px;
-}
-.react-chatbot-kit-chat-input{
-  outline: none;
-}
-.react-chatbot-kit-user-chat-message{
-  margin-right: 10px;
-}  
-body{
-  width: 85%;
-  margin: auto;
   background-color: white;
 }
-.container{
-  display:grid;
-  grid-template-columns:70% 30%;
-  height:800px;
 
-}
-.footerOption{
+/* .footerOption{
   font-weight:550;
   font-size:18px;
   cursor: pointer;
@@ -41,4 +17,4 @@ body{
 .footerOption:hover{
    color:rgb(205,23,31);
    transition: 100ms;
-}
+} */
