--- a/stock/src/index.css
+++ b/stock/src/index.css
@@ -1,11 +1,11 @@
 body {
   margin: 0;
-  font-family: 'Alegreya Sans SC';
+  /* //font-family: 'Alegreya Sans SC'; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  /* font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace; */
 }
