--- a/stock/src/styles/home.module.css
+++ b/stock/src/styles/home.module.css
@@ -1,27 +1,52 @@
-.ipo{
-    height:auto;
-    width:90%;
-    margin: auto;
-    margin-top:13%;
-    margin-left: 10%;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-    padding-left:5%;
-    padding-top:2%
-   
+.container {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 30px;
 }
-.future{
-  
-    height:50px;
-    width:100%;
-    margin-top:5%;
-    display:flex;
-    gap:5%;
-    cursor: pointer;
+.leftDiv {
+  flex: 3;
+  margin: 10px;
 }
-.line{
-    width:70%;
-    margin: auto;
-   border: 0.0025px solid black;
-   margin-top: -2%;
-
+.rightDiv {
+  flex: 1;
+  padding: 10px;
+}
+.ipo {
+  height: auto;
+  width: 90%;
+  margin: auto;
+  margin-top: 13%;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  padding-top: 2%;
+}
+.future {
+  height: 50px;
+  width: 100%;
+  margin-top: 5%;
+  display: flex;
+  gap: 5%;
+  cursor: pointer;
+  margin-left: 10px;
+}
+.line {
+  width: 70%;
+  margin: auto;
+  border: 0.0025px solid black;
+  margin-top: -2%;
+}
+.helpBox {
+    position: relative;
+}
+.help {
+  float: right;
+  margin-right: 50px;
+  border: none;
+  background-color: #0456b9;
+  color: white;
+  font-weight: bold;
+  width: 7%;
+  padding: 0.5rem;
+  border-radius: 5%;
+  cursor: pointer;
 }
