--- a/stock/src/styles/navigation.module.css
+++ b/stock/src/styles/navigation.module.css
@@ -1,47 +1,46 @@
 .navigation{
-    background-color:white;
     height: 80px;
-    width: 90%;
+    width: 100%;
     display:grid;
     grid-template-columns: 35% 45% 20%  ;
     position: fixed;
     top:0px;
+    background-color: aliceblue;
+    padding: 0px 30px;
 }
 .logoDiv{
-    height: 100%;
-    width: 100%;
-   padding-left: 3%;
    display:flex;
    gap:4%;
-   
+   align-items: center;
 }
-.logoDiv >img{
+.logoDiv>img{
     height: 80px;
-    width: 150px;
-    margin-Top: -3%;  
+    width: 150px; 
 }
 .explore{
     text-decoration: none;
     color: black;
-    font-size: 22px;
-    margin-top:15px;
+    font-size: 18px;
+    font-weight: bold;
 }
 .search{
-    border-top: none;
     height:30px;
-    width:90%;
+    width:50%;
     margin:auto;
     margin-top:3.5%;
-    border-left: none;
-    border-right: none;
+    border: none;
     background-color: white;
-    
+    float: right;
+    font-size: 15px;
+    padding-left: 5px;
+    outline: none;
 }
 .account{
-    margin-left: 5%;
-    display:grid;
-    grid-template-columns: repeat(3,1fr);
-    padding-top: 4%;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   gap: 20px;
+   margin-right: 30px;
 }
 .explore:hover{
     color:#0456B9;
@@ -57,16 +56,16 @@
     border-radius:2px;
     z-index: 3;
     margin:auto;
-    margin-top:5%;
+    margin-top:25%;
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    margin-left: 30%;
-    
+    margin-left: 20%;
 }
 .imageDiv{
    
 height:100%;
-width: 100%;   
+width: 100%;  
+
 }
 .emailDiv{
     border:1px solid black;
@@ -76,9 +75,9 @@ width: 100%;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
-.backImage{
+/* .backImage{
     border-top-left-radius: ;
-}
+} */
 .btn1{
     width:320px;
     height:40px;
@@ -88,21 +87,23 @@ width: 100%;
     cursor: pointer;
     border: none;
     display: flex;
-    margin-left:15%
+    margin: auto;
 }
 .btn1:hover{
     background-color:rgb(247, 236, 236);
     transition: all 0.
 }
 .btn2{
-    height:50px;
-    width:350px;
+    height:40px;
+    width:40%;
     background-color:#0456B9;
     border: none;
     color:white;
     font-size:20px;
-    margin-top:3%;
-    margin-left:10%;
+    border-radius: 3%;
+    display: block;
+    margin: auto;
+    margin-top:5%;
     cursor: pointer;
 }
 .btn2:hover{
